--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "hubot-fliptable": "~1.1.0",
     "hubot-help": "^0.1.3",
     "hubot-heroku-keepalive": "^1.0.2",
-    "hubot-pugme": "^0.1.0",
+    "hubot-insulter": "^1.0.2",
     "hubot-plusplus": "^1.2.3",
+    "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.3",
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
