--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "hubot-redis-brain": "0.0.3",
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
-    "hubot-slack": "^4.3.3",
-    "hubot-soon": "~1.0.0"
+    "hubot-slack": "^4.3.3"
   },
   "engines": {
     "node": "7.x"
